changed some comments

--- a/arm_manipulation.ipynb
+++ b/arm_manipulation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 10,
    "source": [
     "# %load arm_example.py\n",
     "import crocoddyl\n",
@@ -42,8 +42,8 @@
     "Mref = crocoddyl.FrameTranslation(robot_model.getFrameId(\"gripper_left_joint\"), target) # Frame Translation entre main et arrivée (coordonnées de l'arrivée dans le repère de la main ?)\n",
     "state = crocoddyl.StateMultibody(robot.model) # états du bras robotique\n",
     "goalTrackingCost = crocoddyl.CostModelFrameTranslation(state, Mref) # Cost entre l'état actuel du bras et la position désirée finale\n",
-    "xRegCost = crocoddyl.CostModelState(state) # Initialisation du modele de cout sur les états 0.5 x²\n",
-    "uRegCost = crocoddyl.CostModelControl(state) # Initialisation du modele de cout sur les commandes 0.5x²\n",
+    "xRegCost = crocoddyl.CostModelState(state) # Initialisation du modele de cout sur les états 0.5 x² par défaut\n",
+    "uRegCost = crocoddyl.CostModelControl(state) # Initialisation du modele de cout sur les commandes 0.5 u² par défaut\n",
     "\n",
     "# Create cost model per each action model\n",
     "runningCostModel = crocoddyl.CostModelSum(state) # Initialisation la somme de couts du model (en execution)\n",
@@ -78,7 +78,7 @@
     "# Creating the DDP solver for this OC problem, defining a logger\n",
     "ddp = crocoddyl.SolverDDP(problem) # creation du DDP solver pour résoudre le probleme\n",
     "# ddp.setCallbacks([crocoddyl.CallbackVerbose()]) # set callbacks pour des logs\n",
-    "ddp.setCallbacks([crocoddyl.CallbackDisplay(display)]) # set callbacks pour des logs\n",
+    "ddp.setCallbacks([crocoddyl.CallbackDisplay(display)]) # voir la résolution du probleme sur gepetto-gui\n",
     "\n",
     "# Solving it with the DDP algorithm\n",
     "ddp.solve() # le DDP résout le probleme\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 11,
    "source": [
     "dataCollector = crocoddyl.DataCollectorMultibody(robot.data)\n",
     "trackData = goalTrackingCost.createData(dataCollector)"
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 12,
    "source": [
     "pinocchio.updateFramePlacements(robot.model, robot.data)\n",
     "pinocchio.computeJointJacobians(robot.model, robot.data, xT[:state.nq])\n",
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 13,
    "source": [
     "targets = np.array([[0.4, 0., 0.4],\n",
     "                    [0.4, 0.4, 0.4],\n",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 14,
    "source": [
     "state = crocoddyl.StateMultibody(robot.model)\n",
     "\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 15,
    "source": [
     "Mref0 = crocoddyl.FrameTranslation(robot_model.getFrameId(\"gripper_left_joint\"), targets[0,:])\n",
     "goalTrackingCost0 = crocoddyl.CostModelFrameTranslation(state, Mref0)\n",
@@ -378,16 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 16,
    "source": [
     "seq0 = [runningModels[0]]*T + [terminalModels[0]]\n",
-    "# seq1 = [runningModels[1]]*T + [terminalModels[1]]\n",
-    "# seq2 = [runningModels[2]]*T + [terminalModels[2]]\n",
-    "# seq3 = [runningModels[3]]*T \n",
-    "problem = crocoddyl.ShootingProblem(x0,[runningModels[0]]*T ,terminalModels[0])\n",
+    "seq1 = [runningModels[1]]*T + [terminalModels[1]]\n",
+    "seq2 = [runningModels[2]]*T + [terminalModels[2]]\n",
+    "seq3 = [runningModels[3]]*T \n",
+    "# problem = crocoddyl.ShootingProblem(x0,[runningModels[0]]*T ,terminalModels[0])\n",
     "# problem = crocoddyl.ShootingProblem(x0,seq0+seq1,terminalModels[1])\n",
     "# problem = crocoddyl.ShootingProblem(x0,seq0+seq1+seq2,terminalModels[2])\n",
-    "# problem = crocoddyl.ShootingProblem(x0,seq0+seq1+seq2+seq3,terminalModels[3])"
+    "problem = crocoddyl.ShootingProblem(x0,seq0+seq1+seq2+seq3,terminalModels[3])"
    ],
    "outputs": [],
    "metadata": {}
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 17,
    "source": [
     "ddp = crocoddyl.SolverDDP(problem)\n",
     "ddp.setCallbacks([crocoddyl.CallbackDisplay(display)]) # set callbacks pour des logs\n",
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 18,
    "source": [
     "for i in range(1,6):\n",
     "    for m in terminalModels:\n",
@@ -449,7 +449,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-261-0e4f977c8039>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mterminalModels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcosts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcosts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'gripperPose'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mddp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mddp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mddp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mus\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-18-0e4f977c8039>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mterminalModels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0mm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcosts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcosts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'gripperPose'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mddp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mddp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mddp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mus\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'IntegratedActionModelEuler' object has no attribute 'costs'"
      ]
     }
